--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -12,7 +12,7 @@
       },
       "Docker": {
         "Entrypoint": [
-          "nvidia-smi --query-gpu=name --format=csv,noheader"
+          "/usr/bin/nvidia-smi --query-gpu=name --format=csv,noheader"
         ],
         "Image": "nvcr.io/nvidia/cuda:11.6.2-base-ubuntu20.04"
       },
