--- a/lilypad_module.json.tmpl
+++ b/lilypad_module.json.tmpl
@@ -12,7 +12,7 @@
       },
       "Docker": {
         "Entrypoint": [
-          "ls"
+          "nvidia-smi"
         ],
         "Image": "nvcr.io/nvidia/cuda:11.6.2-base-ubuntu20.04"
       },
